# aea-tools

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
examples/asahi_firmware/: Cargo.toml  LICENSE  default.nix
examples/asahi_firmware/src/: main.rs
src/: cluster_header.rs  crypto.rs  dictionary.rs  lib.rs  main.rs  prologue.rs  reader.rs  root_header.rs  segment_info.rs  stream.rs
