[package]
name = "asahi-remote-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.101"
apfs = "0.2.3"
async_zip = { version = "0.0.18", features = ["deflate", "tokio"] }
base64 = "0.22.1"
ctr = "0.9.2"
futures = "0.3.31"
hkdf = "0.12.4"
hmac = "0.12.1"
lzfse_rust = "0.2.0"
rayon = "1.11.0"
remote-file = "0.2.1"
reqwest = "0.13.2"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
