[package]
name = "asahi-remote-firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.101"
apfs = "0.2.3"
async-recursion = "1.1.1"
base64 = "0.22.1"
ctr = "0.9.2"
futures = "0.3.31"
hkdf = "0.12.4"
hmac = "0.12.1"
http-range-client = { version = "0.9.1", features = ["rustls-tls", "ureq-sync"], default-features = false }
lzfse_rust = "0.2.0"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
zip = "8.2.0"
