[package]
name = "aea-tools"
description = "Utility for Apple Encrypted Archives in Rust"
repository = "https://github.com/GavBog/aea-tools"
version = "0.1.0"
authors = ["Gavin Bogie <me@gbogie.com> (https://www.gbogie.com/)"]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace]
members = ["examples/*"]

[dependencies]
aes = "0.8.4"
anyhow = "1.0.101"
ctr = "0.9.2"
hkdf = "0.12.4"
hmac = "0.12.1"
lru = "0.16.3"
lzfse_rust = "0.2.0"
sha2 = "0.10.9"
