[package]
name = "asahi_firmware"
version = "0.1.0"
edition = "2024"

[dependencies]
aea_tools = { path = "../.." }
anyhow = "1.0.102"
base64 = "0.22.1"
exhume_apfs = "0.1.3"
flate2 = "1.1.9"
http-range-client = { version = "0.9.1", default-features = false, features = ["ureq-sync"] }
tar = "0.4.44"
zip = "8.2.0"
